# lock_smith

./: .gitignore  Cargo.toml
ec_secrets_management/: .env.template  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml  SETUP.md  docker-compose.yml  mongo-init.js  package.json  playground.mongodb.js
ec_secrets_management/public/assets/icons/: site.webmanifest
ec_secrets_management/public/css/: auth.css  console.css  variables.css
ec_secrets_management/public/js/: constants.js  login.js  register.js
ec_secrets_management/public/pages/: console.html  login.html  register.html
ec_secrets_management/src/: lib.rs  main.rs
ec_secrets_management/src/custom_catchers/: mod.rs
ec_secrets_management/src/db/: mod.rs
ec_secrets_management/src/fairings/: mod.rs
ec_secrets_management/src/models/: mod.rs
ec_secrets_management/src/request_guards/: mod.rs
ec_secrets_management/src/routes/: mod.rs  users.rs  vault.rs
ec_secrets_management/src/utils/: hashing.rs  token.rs
ec_secrets_management/tests/: ec_secrets_management.http
ec_secrets_manager_cli/: Cargo.toml
ec_secrets_manager_cli/src/: lib.rs  main.rs
ec_secrets_manager_cli/src/auth/: mod.rs
ec_secrets_manager_cli/src/models/: auth.rs  mod.rs  session.rs
ec_secrets_repositories/: Cargo.toml
ec_secrets_repositories/src/db/: mod.rs
ec_secrets_repositories/src/repositories/: mod.rs  vault.rs
ec_secrets_shared_library/: Cargo.toml
ec_secrets_shared_library/src/: lib.rs
ec_secrets_shared_library/src/db/: mod.rs
ec_secrets_shared_library/src/models/: mod.rs
(+4 files in other folders)
