[package]
name = "ec_secrets_management"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "ec_secrets_management"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
crypto = "0.5.1"
dotenvy = "0.15.7"
futures = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
rust-argon2 = "2.1.0"
pbkdf2 = "0.12.2"
rand = "0.9.0"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
serde_json = "1.0.140"
sha2 = "0.10.8"
tokio = { version = "1.44.1", features = ["full"] }
anyhow = "1.0.97"
jsonwebtoken = "9.3.1"
bcrypt = "0.17.0"
pasetors = "0.7.2"
ec_secrets_repositories = {path = "../ec_secrets_repositories"}
log = "0.4.26"
base64 = "0.22.1"
